--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <script defer data-domain="dankuri.dev" data-api="/plausible/api/event" src="/plausible/js/script.js"></script>
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
